package jdb;
option java_package = "protobuf.clazz.jdb";
option java_outer_classname = "jdbRsp";
import "basic/protocol.proto";

//房间信息
message RoomInfoJdb {
	optional int32 room_id = 1; //房间号
	optional int32 game_type_index = 4; //玩法
	optional int32 game_rule_index = 2; //玩法
	optional string game_rule_des = 3; //玩法说明
	optional int32 game_round = 5;
	optional int32 cur_round = 6;
	optional int32 game_status = 7;
	optional int64 create_player_id = 8;
	optional int32 begin_left_card = 9;
	optional int32 banker_player = 10; //当前庄家
	optional string create_name = 11; //创建者姓名
	optional int64 min_carry_momey = 12 ;//最低携带量
	optional int64 max_carry_momey = 13;//最大携带量
	optional int64 init_momey = 14;     //初始分
	optional int64 enter_gold = 15;    //入场扣豆
	optional int64 pu_fen_glod = 16; //每次补分扣豆
	optional int64 add_banker_glod = 17;//添庄扣豆
	optional int64 min_bu_money = 18;   //最低补分
	optional int64 max_bu_money = 19;   //最高补分
	optional int64 left_time = 20;     //剩余时间
}

//房间的玩家
message RoomPlayerResponseJdb {
	optional int64 account_id = 1; //账号id
	optional string user_name = 2; //角色名
	optional string head_img_url = 3; //玩家头像
	optional int32 seat_index = 4; //玩家位置索引
	optional string ip = 5; //玩家IP
	optional int32 online = 6; //1在线0断线
	optional int32 sex = 7;
	optional float score = 8;
	optional int32 ready = 9; //0没准备,1准备
	optional string ip_addr = 10; //物理地址
	optional LocationInfor locationInfor = 11;
	optional bool is_trustee = 12; //true托管 false 取消
	optional int64 money = 13; //金币
	optional int64 gold = 14; //闲逸豆
	optional int64 carry_money = 15; //携带金币
	optional int32 apply_seat_index = 16;//申请位置
	optional int64 bu_money = 17;   //补分

}
//申请玩家列表
message PlayerListJdb{
	repeated RoomPlayerResponseJdb players = 1; //账号info
}
//用户结束
message PlayerResultJdb{
	 repeated RoomPlayerResponseJdb players = 1; //账号info
	 optional int64 own_score = 2;                     //我的积分
	 optional int64 Total_record = 3;                  //总战绩
	 optional int64 dayingjia = 4;     //大结算的大赢家
	 optional int64 start_time = 5;    //开始时间
	 optional int64 end_time = 6;      //结束时间
}
//结算
message PukeGameEndJdb{
	optional RoomInfoJdb room_info = 1;
	optional int32 cur_round = 2; //当前圈数
	optional int32 game_round = 3; //游戏圈数
	repeated Int32ArrayResponse cards_data = 4; //扑克列表
	repeated Int32ArrayResponse jetton_player = 5; //用户下注
	repeated int32 end_score = 6;//结算分数
	optional int32 reason = 7;//结束类型
	repeated RoomPlayerResponseJdb players = 8;
	//总结算
	optional PlayerResultJdb player_result = 9;

	optional int32 winner = 10;//赢家s
	repeated int32 area_status = 12; //区域输赢
	repeated int32 operate_button = 13; // 操作按钮
	optional int32 add_banker_times = 14;//添庄次数
	optional int32 cur_banker = 15;     //庄家位置
}
//战绩
message RecordList{
	optional int32 cur_round = 1;          //局数
	repeated Int32ArrayResponse cards_data = 2; //扑克列表
	repeated Int32ArrayResponse jetton_player = 3; //用户下注
	repeated int32 end_score = 4;//结算分数
	repeated int32 area_status = 5; //区域输赢
	optional int32 banker_seat = 6; //庄家位置
	repeated RoomPlayerResponseJdb players = 7;

}

message TableResponseJdb {
	//游戏变量
	optional int32 banker_player = 1; //庄家玩家
	optional RoomInfoJdb room_info = 2;
	repeated RoomPlayerResponseJdb players = 3;
	repeated Int32ArrayResponse cards_data = 4; //扑克列表
	repeated int32 jetton_button = 5; // 下注按钮
	repeated Int32ArrayResponse jetton_score = 6;//玩家下注
	repeated int32 open_card = 7;//玩家 完成
	repeated bool liang_card = 8;//玩家亮牌
	optional int32 scene_status = 9;  //场景状态
	optional int32 display_time = 10; //显示时间
	repeated int32 jdb_value = 11;  //点数
	repeated int32 area_status = 12; // 区域状态
	repeated int32 player_score = 13; //用户分数
	repeated int32 call_button =14;//叫庄按钮
	repeated bool player_status = 15;//玩家状态
	repeated int32 operate_button = 16;//操作按钮
	optional int64 hou_shou_score = 17; //后手分
	optional int32 qie_card = 18; //切牌
	repeated int32 call_banker = 19;//抢庄按钮

}
message PauseGameJdb{
	optional bool opt_type = 1;      //操作类型，true暂停，
	optional string des = 2;          //游戏描述
}
message ButtonOperateJdb{
    optional int32 opreate_type = 1;//按钮显示类型 --0是抢庄 1是下注
    optional int32 min_jetton_score = 2; //下注最低分
    optional int32 max_jetton_score = 3; //下注最高分
	repeated int32 button = 4;//玩家按钮
	optional int32 display_time = 5; //下注时间
	optional int32 is_showpass = 6; //要不要显示pass按钮 0不显示 1显示
	optional int64 max_table_jetton_score = 7; //桌面最大下多少分
}
message JettonResultJdb{
	optional int32 jetton_seat = 1; // 下注用户的位置
	optional int64 jetton_score = 2; //下注用户的分数
	optional int64 jetton_area = 3; //下注区域
	optional int64 player_max_jetton = 4;//最多可以下注
}
message PopupMessage{
	optional int32 displaytime  = 1; // 显示时间 -1没有时间
	optional int32 operate_button = 2; //操作按钮
	optional int32 operate_type = 3;   //操作类型
	optional string des         = 4;   //描述内容
}
message GameStartJdb{
	optional RoomInfoJdb room_info = 1;
	repeated RoomPlayerResponseJdb players = 3;
}

message SelectdBankerJdb{
	optional int32 banker_seat = 1; // 抢庄用户的位置
	optional int32 banker_score = 2; //抢庄用户的倍数
}
message SeatFrist{
	optional int32 card = 1; //切出来的牌
	optional int32 first_seat_idex = 2;//椅子号
}
message SelectdBankerResultJdb{
	optional int32 banker_seat = 1; // 抢庄用户的位置
	optional int64 hou_shou_score = 2; //庄家后手分
	repeated RoomPlayerResponseJdb players = 3;
}

message SendCardJdb{
    optional int32 opreate_type = 1;//0:抢庄前 1:抢庄后
	repeated Int32ArrayResponse send_card = 2; // 发牌
	optional int32 display_time = 3;  // 显示牌
}
message OpenCardJdb{
	optional int32 open_card = 1;
	optional int32 seat_index = 2;
	repeated int32 cards  = 3;
	optional int32 jdb_value = 4;  //牛几
	optional int32 times = 5;  //倍数
}
//亮牌结算
message LiangCardJdb{
	optional int32 	seat_index = 1; //玩家ID
	repeated int32  cards = 2;       //牌值
	optional int32 jdb_value = 3;  //牛几
	optional int32 times = 4;  //倍数

}
//旁观消息
message RoomPlayInfo{
	optional RoomInfoJdb room_info = 2; //房间消息
	repeated RoomPlayerResponseJdb players = 3; //用户消息
}
//返回数据
message ReturnDataJdb{
	optional int32 opt_type = 1;         //操作类型
	optional bool  is_success = 2;       //是否成功 true 成功，false不成功
	optional string des = 3;             //文字描述

}

message Opreate_Jdb_Request{
	optional int32  opreate_type = 1;//1:r抢庄 2：下注  3：开牌 4：房主回复申请 5:申请进入
	optional int32 	sub_btn = 2;//按钮下标
	optional int32 	add_jetton_area = 3; //下注区域
	optional bool  	is_creator_operate= 4;//true:坐下， false忽略
	optional int64  apply_account_id = 5;//申请帐号ID
	optional int32  seat_index = 6;     //选择坐下的位置
	optional int64  momey = 7;     //携带金币
	optional int32  jetton_score = 8;    //下注分数
	optional int32  operate_button = 9;  //操作按钮
	optional int32 	apply_round = 10;    //请求局数

}

